[project]
name = "toyota"
description = "Toyota Connected Services integration for Home Assistant"
license = "MIT"
version = "v2.0.13"
authors = [
            {name = "CM000n", email = "simon.hoerrle@gmail.com"},
            {name = "deejay1", email = "deejay1@srem.org"}
            ]
requires-python = '>=3.13,<3.14'
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false
requires-poetry = '>=2.0'

[tool.poetry.dependencies]
arrow = "^1.3"
homeassistant = "^2025.0.0"
pytoyoda = "^3.0.4"

[tool.poetry.group.dev.dependencies]
homeassistant-stubs = "^2025.0"
pre-commit = "^4.1"
voluptuous-stubs = "^0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
extend-exclude = ["tests"]
lint.select = ["ALL"]
lint.extend-ignore = ["D203", "D213", "COM812"]
lint.pydocstyle.convention = "google"
format.docstring-code-format = true
